--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8080
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/my_java_app
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Root@123
 
-#test=helloworld
+jdbc.host=${JDBC_HOST:127.0.0.1}
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
