--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 server.port=8080
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/my_java_app
-spring.datasource.username=root
-spring.datasource.password=Root@123
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/my_java_app
+#spring.datasource.username=root
+#spring.datasource.password=Root@123
 
-jdbc.host=${JDBC_HOST:127.0.0.1}
+DB.HOST=${DB_HOST:127.0.0.1}
+DB.USERNAME=${DB_USERNAME:root}
+DB.PASSWORD=${DB_PASSWORD:Root@123}
+
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
